--- a/03_표관련태그.html
+++ b/03_표관련태그.html
@@ -15,6 +15,12 @@
             padding : 10px;
             text-align : center;
         }
+
+        table{
+            width: 80%;
+            margin : 20px auto;
+            border-collapse: collapse;
+        }
     </style>
 
 </head>
@@ -83,10 +89,13 @@
             <td height="200">자기소개</td>
             <td colspan="3"></td>
         </tr>
-
-
-
     </table>
+
+
+
+
+
+
 
 
 </body>
